2002-05-07  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* sound.c: (sound_close), (sound_play), (sound_register),
	(play_title_music), (stop_title_music): make the sound support
	optional (can anybody actually test that ?)

2002-05-05  Chris Lyttle <chris@wilddev.net>

	* help/C/Makefile.am: updated for new format of SK 0.3.8.
	* help/C/gnome-stones-C.omf: updated for new format of SK 0.3.8.
	
2002-05-02  Dave Neary  <bolsh@gimp.org>

	* Makefile.am:
	* io.c: 
	* io.h:
	* main.c:
	* object.c:
	* preferences.c:
	* sound.c:
	* status.c:
	* view.c:
	* view.h: ported to Gnome2.
	
2002-04-17  Bastien Nocera  <hadess@hadess.net>

	* main.c: (about_cb): added icon to about box

2002-04-17  Bastien Nocera  <hadess@hadess.net>

	* main.h, sound.c, sound.h: forgot some files

2002-04-17  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* atari.caves.in:
	* cave.c: (cave_new), (cave_iterate):
	* graphics/Makefile.am:
	* graphics/animated_curtain.png:
	* graphics/boulder.png:
	* graphics/diamond.png:
	* io.c: (gstones_game_load):
	* main.c: (my_exit), (title_image_load), (curtain_ready),
	(countdown_timeout_function), (countdown_start),
	(iteration_timeout_function), (load_game), (game_start_cb),
	(game_stop_cb), (quit_cb), (gstones_exit), (main):
	* object.c: (default_objects_init), (object_register):
	* objects/gnome-stones.c: (stones_sound_play), (empty_signals),
	(gnome_init_cave), (gnome_scanned), (boulder_scanned),
	(diamond_scanned), (explosion_new), (entrance_signals),
	(objects_init):
	* preferences.c: (caves_suffix), (game_directory_scan),
	(scroll_method_name), (set_scroll_method), (preferences_save),
	(preferences_restore), (preferences_apply_cb),
	(preferences_set_scroll_method), (preferences_dialog_new):
	* preferences.h:
	* sounds/Makefile.am:
	* sounds/born.wav:
	* sounds/boulder.wav:
	* sounds/dig.wav:
	* sounds/door_open.wav:
	* sounds/explosion.wav:
	* sounds/get_diamond.wav:
	* sounds/title.wav:
	* types.h: